fixed start bash